--- a/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
+++ b/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
@@ -52,7 +52,7 @@ input:
         e.g. [ id:'test_reference' ]
   - fasta:
       type: file
-      description: Groovy Map containing fasta reference genome information
+      description: Fasta reference file
       pattern: "*.fasta"
   - meta3:
       type: map
@@ -61,7 +61,7 @@ input:
         e.g. [ id:'test_reference' ]
   - fai:
       type: file
-      description: Groovy Map containing fasta index information
+      description: Fasta file index
       pattern: "*.fasta.fai"
   - meta4:
       type: map
@@ -70,7 +70,7 @@ input:
         e.g. [ id:'test_reference' ]
   - dict:
       type: file
-      description: Groovy Map containing reference genome information for GATK sequence dictionary
+      description: GATK sequence dictionary
       pattern: "*.dict"
   - meta5:
       type: map
@@ -79,7 +79,7 @@ input:
         e.g. [ id:'test_reference' ]
   - code:
       type: file
-      description: custom user code . May be empty if script if provided via `task.ext.args2`.
+      description: File containing custom user code . May be empty if script if provided via `task.ext.args2`.
       pattern: "*.{code,script,txt,tsv,java,js}"
   - meta6:
       type: map
