Apply suggestions from code review
Co-authored-by: Simon Pearce <24893913+SPPearce@users.noreply.github.com>

--- a/modules/nf-core/jvarkit/vcf2table/meta.yml
+++ b/modules/nf-core/jvarkit/vcf2table/meta.yml
@@ -15,7 +15,7 @@ tools:
       documentation: "https://jvarkit.readthedocs.io/"
       tool_dev_url: "https://github.com/lindenb/jvarkit"
       doi: "10.6084/m9.figshare.1425030"
-      licence: ["MIT License"]
+      licence: ["MIT"]
 
   - "bcftools":
       description: |
