fixed indentation errors

--- a/modules/nf-core/hisat2/align/meta.yml
+++ b/modules/nf-core/hisat2/align/meta.yml
@@ -74,7 +74,7 @@ output:
       - "*fastq.gz":
           type: file
           description: Output FastQ file
-          pattern: "*fastq.gz
+          pattern: "*fastq.gz"
   - versions:
       - versions.yml:
           type: file
