--- a/modules/nf-core/affy/justrma/meta.yml
+++ b/modules/nf-core/affy/justrma/meta.yml
@@ -29,7 +29,7 @@ input:
         description: Path to a directory containing CEL files
         pattern: "*.{CEL,CEL.gz}"
   - - meta2:
-        ype: map
+        type: map
         description: |
           Groovy Map containing sample information
           e.g. [ id:'test' ]
