fix quote in meta

--- a/modules/nf-core/telseq/meta.yml
+++ b/modules/nf-core/telseq/meta.yml
@@ -16,7 +16,7 @@ tools:
       documentation: "https://github.com/zd1/telseq"
       tool_dev_url: "https://github.com/zd1/telseq"
       doi: "10.1093/nar/gku181"
-      licence: ['GPL v3']
+      licence: ["GPL v3"]
       args_id: "$args"
   - samtools:
       description: Tools for dealing with SAM, BAM and CRAM files
