Display message when error 132 found (#6675)
* Display message when error 132 found

* Update snapshots

* Make lint happy

* Add call to the function with trap

* Make nf-core lint happy

* More linting

* Make lint happy

--- a/modules/nf-core/kalign/align/meta.yml
+++ b/modules/nf-core/kalign/align/meta.yml
@@ -12,13 +12,13 @@ tools:
       tool_dev_url: "https://github.com/TimoLassmann/kalign"
       doi: "10.1093/bioinformatics/btz795"
       licence: ["GPL v3"]
-      identifier: ""
+      identifier: "biotools:kalign"
 input:
   - - meta:
         type: map
         description: |
           Groovy Map containing sample information
-          e.g. `[ id:'test']`
+          e.g. [ id:'test']
     - fasta:
         type: file
         description: Input sequences in FASTA format. May be gzipped or uncompressed.
