--- a/modules/nf-core/telseq/meta.yml
+++ b/modules/nf-core/telseq/meta.yml
@@ -1,86 +1,89 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "telseq"
 description: "Telseq: a software for calculating telomere length"
 keywords:
-  - bam
-  - cram
-  - genomics
-  - samtools
-  - telomere
-  - telseq
+- bam
+- cram
+- genomics
+- samtools
+- telomere
+- telseq
 tools:
-  - "telseq":
-      description: "A software for calculating telomere length"
-      homepage: "https://github.com/zd1/telseq"
-      documentation: "https://github.com/zd1/telseq"
-      tool_dev_url: "https://github.com/zd1/telseq"
-      doi: "10.1093/nar/gku181"
-      licence: ["GPL v3"]
-      args_id: "$args"
-  - samtools:
-      description: Tools for dealing with SAM, BAM and CRAM files
-      homepage: http://www.htslib.org/
-      documentation: http://www.htslib.org/doc/samtools.html
-      tool_dev_url: https://github.com/samtools/samtools
-      doi: 10.1093/bioinformatics/btp352
-      licence: ["MIT"]
+- "telseq":
+    description: "A software for calculating telomere length"
+    homepage: "https://github.com/zd1/telseq"
+    documentation: "https://github.com/zd1/telseq"
+    tool_dev_url: "https://github.com/zd1/telseq"
+    doi: "10.1093/nar/gku181"
+    licence: ["GPL v3"]
+    args_id: "$args"
+    identifier: ''
+- samtools:
+    description: Tools for dealing with SAM, BAM and CRAM files
+    homepage: http://www.htslib.org/
+    documentation: http://www.htslib.org/doc/samtools.html
+    tool_dev_url: https://github.com/samtools/samtools
+    doi: 10.1093/bioinformatics/btp352
+    licence: ["MIT"]
+    identifier: 'biotools:samtools'
 input:
-  - meta:
+- - 'meta ':
       type: map
       description: |
         Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
+        e.g. [ id:'genome' ]
   - bam:
       type: file
       description: BAM/CRAM/SAM file
       pattern: "*.{bam,cram,sam}"
   - bai:
       type: file
-      description: BAM/CRAM index file
+      description: bam index file
       pattern: "*.{bai,crai}"
-  - meta2:
+- - meta2:
       type: map
       description: |
-        Groovy Map containing fasta information
-        e.g. [ id:'test_reference' ]
+        Groovy Map containing reference information
+        e.g. [ id:'genome' ]
   - fasta:
       type: file
-      description: Fasta reference file
-      pattern: "*.{fasta,fa}"
-  - meta3:
+      description: Reference genome file
+      pattern: "*.{fa,fasta}"
+- - meta3:
       type: map
       description: |
-        Groovy Map containing fasta.fai information
-        e.g. [ id:'test_reference' ]
+        Groovy Map containing reference index information
+        e.g. [ id:'genome' ]
   - fai:
       type: file
-      description: Fasta file index
+      description: Fasta index file
       pattern: "*.fai"
-  - meta4:
+- - meta4:
       type: map
       description: |
         Groovy Map containing bed information
-        e.g. [ id:'test_reference' ]
+        e.g. [ id:'genome' ]
   - bed:
       type: file
       description: Optional exome regions in BED format. These regions will be excluded
       pattern: "*.bed"
 output:
+- output:
   - meta:
       type: map
       description: |
         Groovy Map containing sample information
         e.g. `[ id:'sample1', single_end:false ]`
-  - output:
+  - '*.telseq.tsv':
       type: file
       description: Telseq output
       pattern: "*.tsv"
-  - versions:
+- versions:
+  - versions.yml:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
 authors:
-  - "@lindenb"
+- "@lindenb"
 maintainers:
-  - "@lindenb"
+- "@lindenb"
