--- a/modules/nf-core/telseq/meta.yml
+++ b/modules/nf-core/telseq/meta.yml
@@ -17,7 +17,7 @@ tools:
       doi: "10.1093/nar/gku181"
       licence: ["GPL v3"]
       args_id: "$args"
-      identifier: ''
+      identifier: ""
   - samtools:
       description: Tools for dealing with SAM, BAM and CRAM files
       homepage: http://www.htslib.org/
@@ -25,7 +25,7 @@ tools:
       tool_dev_url: https://github.com/samtools/samtools
       doi: 10.1093/bioinformatics/btp352
       licence: ["MIT"]
-      identifier: 'biotools:samtools'
+      identifier: "biotools:samtools"
 input:
   - - 'meta ':
         type: map
