--- a/modules/nf-core/telseq/meta.yml
+++ b/modules/nf-core/telseq/meta.yml
@@ -27,7 +27,7 @@ tools:
       licence: ["MIT"]
       identifier: "biotools:samtools"
 input:
-  - - 'meta ':
+  - - "meta ":
         type: map
         description: |
           Groovy Map containing sample information
