--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -607,6 +607,8 @@ jobs:
           - profile: conda
             path: modules/nf-core/sentieon/bwamem
           - profile: conda
+            path: modules/nf-core/sentieon/datametrics
+          - profile: conda
             path: modules/nf-core/sentieon/dedup
           - profile: conda
             path: modules/nf-core/sentieon/qualcal
