--- a/modules/nf-core/mirdeep2/mapper/meta.yml
+++ b/modules/nf-core/mirdeep2/mapper/meta.yml
@@ -14,35 +14,47 @@ tools:
       tool_dev_url: "https://github.com/rajewsky-lab/mirdeep2"
       doi: "10.1093/nar/gkn491"
       licence: ["GPL V3"]
+      identifier: biotools:mirdeep2
 
 input:
-  - meta:
-      type: map
-      description: Groovy Map containing sample information, e.g. `[ id:'sample1', single_end:false ]`
-  - reads:
-      type: file
-      description: File containing the raw sequencing reads that need to be collapsed and mapped to a reference genome.
-      pattern: "*.fa"
-  - meta2:
-      type: map
-      description: Groovy Map containing information about the genome index.
-  - index:
-      type: file
-      description: Path to the genome index file used for mapping the reads to the genome.
-      pattern: "*"
-
+  - - meta:
+        type: map
+        description: Groovy Map containing sample information, e.g. `[ id:'sample1',
+          single_end:false ]`
+    - reads:
+        type: file
+        description: File containing the raw sequencing reads that need to be collapsed
+          and mapped to a reference genome.
+        pattern: "*.fa"
+  - - meta2:
+        type: map
+        description: Groovy Map containing information about the genome index.
+    - index:
+        type: file
+        description: Path to the genome index file used for mapping the reads to the
+          genome.
+        pattern: "*"
 output:
-  - meta:
-      type: map
-      description: Groovy Map containing sample information e.g. `[ id:'sample1', single_end:false ]`
   - mirdeep2_inputs:
-      type: file
-      description: Outputs for miRDeep2 including the collapsed reads file (FASTA) and the mapped reads in ARF format.
-      pattern: "*"
+      - meta:
+          type: map
+          description: Groovy Map containing sample information e.g. `[ id:'sample1',
+            single_end:false ]`
+      - "*.fa":
+          type: file
+          description: Outputs for miRDeep2 including the collapsed reads file (FASTA)
+            and the mapped reads in ARF format.
+          pattern: "*"
+      - "*.arf":
+          type: file
+          description: Outputs for miRDeep2 including the collapsed reads file (FASTA)
+            and the mapped reads in ARF format.
+          pattern: "*"
   - versions:
-      type: file
-      description: File containing software versions for tracking.
-      pattern: "versions.yml"
+      - versions.yml:
+          type: file
+          description: File containing software versions for tracking.
+          pattern: "versions.yml"
 authors:
   - "@atrigila"
 maintainers:
