Sentieon/datametrics: Add plots optionally for each quality metric (#6676)
* add plots optionally for each quality metric

* switch to nf-test

* add snapshots

* [automated] Fix linting with Prettier

* update meta.yml

* exclude conda

---------

Co-authored-by: nf-core-bot <core@nf-co.re>
Co-authored-by: Pierre Lindenbaum <33838+lindenb@users.noreply.github.com>

--- a/modules/nf-core/sentieon/datametrics/meta.yml
+++ b/modules/nf-core/sentieon/datametrics/meta.yml
@@ -44,6 +44,10 @@ input:
         type: file
         description: Index of the genome fasta file
         pattern: "*.fai"
+  - - plot_results:
+        type: boolean
+        description: Boolean to determine whether plots should be generated
+        pattern: "true or false"
 output:
   - mq_metrics:
       - meta:
@@ -110,6 +114,46 @@ output:
           description: File containing the information about statistical distribution
             of insert sizes
           pattern: "*.txt"
+  - mq_plot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'test', single_end:false ]`
+      - "*mq_metrics.pdf":
+          type: file
+          description: "PDF containting plot of mean base quality scores"
+          pattern: "*.pdf"
+  - qd_plot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'test', single_end:false ]`
+      - "*qd_metrics.pdf":
+          type: file
+          description: "PDF containting plot of specific base quality score"
+          pattern: "*.pdf"
+  - is_plot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'test', single_end:false ]`
+      - "*is_metrics.pdf":
+          type: file
+          description: "PDF containting plot of insert sizes"
+          pattern: "*.pdf"
+  - gc_plot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'test', single_end:false ]`
+      - "*gc_metrics.pdf":
+          type: file
+          description: "PDF containting plot of GC bias"
+          pattern: "*.pdf"
   - versions:
       - versions.yml:
           type: file
