--- a/modules/nf-core/jvarkit/dict2bed/meta.yml
+++ b/modules/nf-core/jvarkit/dict2bed/meta.yml
@@ -17,7 +17,7 @@ tools:
       tool_dev_url: "https://github.com/lindenb/jvarkit"
       doi: "10.1093/bioinformatics/btx734 "
       licence: ["MIT License"]
-      args_id: ["$args1","$args2"]
+      args_id: "$args1"
       identifier: ""
 input:
   - - meta:
