--- a/modules/nf-core/jvarkit/dict2bed/tests/nextflow.config
+++ b/modules/nf-core/jvarkit/dict2bed/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
     withName: JVARKIT_DICT2BED {
-        ext.downstream_cmd =" | cut -f1,2,3 "
+        ext.args2 =" | cut -f1,2,3 "
     }
 }
