lint problem fixes

--- a/modules/nf-core/seurat/multiseqdemux/tests/nextflow.config
+++ b/modules/nf-core/seurat/multiseqdemux/tests/nextflow.config
@@ -1,5 +1,5 @@
 params{
-    //optional parameters for MULTIseq and parameter to start the visualisation module
+    //optional parameters for MULTIseqdemux and parameter to start the visualisation module
     assay = "HTO"
     nfeatures = 2000
     quantile = 0.7
