--- a/modules/nf-core/mirdeep2/mirdeep2/meta.yml
+++ b/modules/nf-core/mirdeep2/mirdeep2/meta.yml
@@ -50,6 +50,7 @@ input:
         type: file
         description: FASTA file containing hairpin sequences (miRNA precursors).
         pattern: "*.fa"
+    - mature_other_species: {}
 output:
   - outputs:
       - meta:
