--- a/modules/nf-core/seurat/multiseqdemux/meta.yml
+++ b/modules/nf-core/seurat/multiseqdemux/meta.yml
@@ -1,76 +1,130 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "seurat_multiseqdemux"
-description: Identify singlets, doublets and negative cells from multiplexing experiments. Annotate singlets by tags
+name: seurat_multiseqdemux
+description: Identify singlets, doublets and negative cells from multiplexing experiments.
+  Annotate singlets by tags
 keywords:
   - demultiplexing
   - hashing-based deconvoltion
   - single-cell
 tools:
-  - "multiseqdemux":
-        description: "Identify singlets, doublets and negative cells from multiplexing experiments. Annotate singlets by tags."
-        homepage: "https://satijalab.org/seurat/"
-        documentation: "https://satijalab.org/seurat/reference/multiseqdemux"
-        tool_dev_url: "https://github.com/satijalab/seurat"
-        doi: "10.1038/s41592-019-0433-8"
-        licence: ["MIT"]
+  - multiseqdemux:
+      description: Identify singlets, doublets and negative cells from multiplexing
+        experiments. Annotate singlets by tags.
+      homepage: https://satijalab.org/seurat/
+      documentation: https://satijalab.org/seurat/reference/multiseqdemux
+      tool_dev_url: https://github.com/satijalab/seurat
+      doi: "10.1038/s41592-019-0433-8"
+      licence: ["MIT"]
+      identifier: biotools:seurat
 input:
-  - meta:
+  - - meta:
         type: map
         description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-  - hto_matrix:
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - hto_matrix:
         type: file
         description: path to matrix from cell hashing data, the tool receives TSV files
-  - rna_matrix:
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - rna_matrix:
         type: file
-        description: path to matrix from RNA expression data, the tool receives TSV files
-  - produce_plots:
+        description: path to matrix from RNA expression data, the tool receives TSV
+          files
+  - - produce_plots:
         type: boolean
         description: "Produce plots for the assignment"
 output:
-  - meta:
-        type: map
-        description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-  - versions:
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
   - assignment:
-        type: file
-        description: File containing the assignment for each cell/nucleus to a specific sample group
-        pattern: "*_assignment.csv"
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_assignment.csv":
+          type: file
+          description: File containing the assignment for each cell/nucleus to a specific
+            sample group
+          pattern: "*_assignment.csv"
   - classification:
-        type: file
-        description: File containing the classification report for each cell/nucleus to a specific sample group
-        pattern: "*_classification.csv"
-  - ridgePlot:
-        type: file
-        description: File containing the ridge plot of the assignment (optional)
-        pattern: "*_ridge_plot.jpeg"
-  - featureScatter:
-        type: file
-        description: File containing the feature scatter plot of the assignment (optional)
-        pattern: "*_feature_scatter_plot.jpeg"
-  - violingPlot:
-        type: file
-        description: File containing the violing plot of the assignment (optional)
-        pattern: "*_violin_plot.jpeg"
-  - tSNE_hto_Plot:
-        type: file
-        description: File containing the tSNE plot of the HTOs present in the data (optional)
-        pattern: "*_tsne_hto_plot.jpeg"
-  - tsne_classification:
-        type: file
-        description: File containing the tSNE plot of the classification (optional)
-        pattern: "*_tsne_classification.jpeg"
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_classification.csv":
+          type: file
+          description: File containing the classification report for each cell/nucleus
+            to a specific sample group
+          pattern: "*_classification.csv"
   - session_info:
-        type: file
-        description: dump of R SessionInfo
-        pattern: "*.log"
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*.R_sessionInfo.log":
+          type: file
+          description: dump of R SessionInfo
+          pattern: "*.log"
+  - ridgePlot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_ridge_plot.jpeg":
+          type: file
+          description: File containing the ridge plot of the assignment (optional)
+          pattern: "*_ridge_plot.jpeg"
+  - featureScatter:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_feature_scatter_plot.jpeg":
+          type: file
+          description: File containing the feature scatter plot of the assignment (optional)
+          pattern: "*_feature_scatter_plot.jpeg"
+  - violingPlot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_violin_plot.jpeg":
+          type: file
+          description: File containing the violing plot of the assignment (optional)
+          pattern: "*_violin_plot.jpeg"
+  - tSNE_hto_Plot:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_tsne_hto_plot.jpeg":
+          type: file
+          description: File containing the tSNE plot of the HTOs present in the data (optional)
+          pattern: "*_tsne_hto_plot.jpeg"
+  - tsne_classification:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*_tsne_classification.jpeg":
+          type: file
+          description: File containing the tSNE plot of the classification (optional)
+          pattern: "*_tsne_classification.jpeg"
+  - versions:
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@mari-ga"
   - "@maxozo"
