ci: Add note about nf-core lint pre-commit

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,6 +41,8 @@ jobs:
   ###################
   # nf-core linting #
   ###################
+  # TODO Move these to pre-commit
+  # https://github.com/nf-core/tools/pull/3141
   nf-core-changes:
     name: nf-core-changes
     runs-on: ubuntu-latest
