Fix databasedownload meta

--- a/modules/nf-core/checkm2/databasedownload/meta.yml
+++ b/modules/nf-core/checkm2/databasedownload/meta.yml
@@ -18,9 +18,9 @@ tools:
       identifier: ""
 
 input:
-  - db_zenodo_id:
-      type: integer
-      description: Zenodo ID of the CheckM2 database
+  - - db_zenodo_id:
+        type: integer
+        description: Zenodo ID of the CheckM2 database
 
 output:
   - database:
