--- a/modules/nf-core/shigapass/meta.yml
+++ b/modules/nf-core/shigapass/meta.yml
@@ -6,7 +6,7 @@ keywords:
   - stec
 tools:
   - shigapass:
-      description: Mass screening of contigs for antibiotic resistance genes
+      description: ShigaPass is a new in silico tool used to predict Shigella serotypes
       homepage: https://github.com/imanyass/ShigaPass
       documentation: https://github.com/imanyass/ShigaPass
       tool_dev_url: https://github.com/imanyass/ShigaPass
