Improve field description

--- a/modules/nf-core/checkm2/databasedownload/meta.yml
+++ b/modules/nf-core/checkm2/databasedownload/meta.yml
@@ -20,7 +20,7 @@ tools:
 input:
   - - db_zenodo_id:
         type: integer
-        description: Zenodo ID of the CheckM2 database
+        description: Zenodo ID of the CheckM2 database to download
 
 output:
   - database:
