--- a/modules/nf-core/irescue/meta.yml
+++ b/modules/nf-core/irescue/meta.yml
@@ -28,12 +28,12 @@ input:
         pattern: "*.bam"
         ontologies:
           - edam: "http://edamontology.org/format_2572"
-    - genome:
+  - genome:
         type: string
         description: |
           Genome assembly symbol. Not used when bed file is provided.
           In this case, it can be any value or an empty string.
-    - bed:
+  - bed:
         type: file
         description: Bed file of repeats genomic coordinates (optional).
         pattern: "*.bed"
@@ -54,8 +54,40 @@ output:
             e.g. `[ id:'sample1', single_end:false ]`
       - ${prefix}:
           type: directory
-          description: Folder containing the quantification results for a specific sample
+          description: Folder containing count matrices and logs
           pattern: "${prefix}"
+  - counts:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}/counts:
+          type: directory
+          description: Folder containing count matrices
+          pattern: "${prefix}/counts"
+  - log:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}/irescue.log:
+          type: file
+          description: Text file contianing run informations
+          pattern: "${prefix}/irescue.log"
+  - tmp:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}/tmp:
+          type: directory
+          description: |
+            Folder containing temporary files,
+            if kept using the "--keeptmp" argument (optional).
+          pattern: "${prefix}/tmp"
 
 authors:
   - "@bepoli"
