--- a/modules/nf-core/deeptools/alignmentsieve/meta.yml
+++ b/modules/nf-core/deeptools/alignmentsieve/meta.yml
@@ -1,8 +1,8 @@
 name: deeptools_alignmentSieve
 description: This tool filters alignments in a BAM/CRAM file according the the specified parameters.
 keywords:
-  - filter
-  - shift
+  - filtering
+  - shifting
 tools:
   - deeptools:
       description: A set of user-friendly tools for normalization and visualzation of
