Refactor checkm2/databasedownload using aria2 (#6654)
* Use aria2 for CHECKM2_DATABASEDOWNLOAD, update snaps

* Fix linting

* Add bioconda to environment.yml

* Add zenodo_id as input to select which version to download

* Add input param to the test

* Add process input for predict

* Fix databasedownload meta

* Improve field description

---------

Co-authored-by: James A. Fellows Yates <jfy133@gmail.com>

--- a/modules/nf-core/checkm2/databasedownload/meta.yml
+++ b/modules/nf-core/checkm2/databasedownload/meta.yml
@@ -17,6 +17,11 @@ tools:
       licence: ["GPL v3"]
       identifier: ""
 
+input:
+  - - db_zenodo_id:
+        type: integer
+        description: Zenodo ID of the CheckM2 database to download
+
 output:
   - database:
       - meta:
