--- a/modules/nf-core/deeptools/alignmentsieve/meta.yml
+++ b/modules/nf-core/deeptools/alignmentsieve/meta.yml
@@ -1,6 +1,7 @@
 name: deeptools_alignmentSieve
 description: This tool filters alignments in a BAM/CRAM file according the the specified parameters.
 keywords:
+  - ATACseq
   - filter
   - shift
   - ATACshift
