--- a/modules/nf-core/seqkit/translate/meta.yml
+++ b/modules/nf-core/seqkit/translate/meta.yml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "seqkit"
-description: Translate DNA/RNA to proteisn sequence
+description: Translate DNA/RNA to protein sequence
 keywords:
   - seqkit
   - translate
