--- a/modules/nf-core/seqkit/translate/meta.yml
+++ b/modules/nf-core/seqkit/translate/meta.yml
@@ -1,6 +1,5 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "seqkit"
+name: "seqkit_translate"
 description: Translate DNA/RNA to protein sequence
 keywords:
   - seqkit
@@ -14,33 +13,34 @@ tools:
       tool_dev_url: "https://github.com/shenwei356/seqkit"
       doi: "10.1371/journal.pone.0163962"
       licence: ["MIT"]
+      identifier: biotools:seqkit
 
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1' ]`
-  - fastx:
-      type: file
-      description: Input fasta/fastq file
-      pattern: "*.{fna,fsa,fas,fa,fasta,fastq,fq}[.gz]"
-
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1' ]`
+    - fastx:
+        type: file
+        description: Input fasta/fastq file
+        pattern: "*.{fna,fsa,fas,fa,fasta,fastq,fq}[.gz]"
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1' ]`
-  - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
   - fastx:
-      type: file
-      description: Translated fasta/fastq file
-      pattern: "*.{fna,fsa,fas,fa,fasta,fastq,fq}[.gz]"
-
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1' ]`
+      - ${prefix}.*:
+          type: file
+          description: Translated fasta/fastq file
+          pattern: "*.{fna,fsa,fas,fa,fasta,fastq,fq}[.gz]"
+  - versions:
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@delfiterradas"
 maintainers:
