--- a/modules/nf-core/pints/caller/environment.yml
+++ b/modules/nf-core/pints/caller/environment.yml
@@ -2,4 +2,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - bioconda::pypints=1.1.10
+  - pip
+  - pip: # FIXME https://github.com/nf-core/modules/issues/5814
+      # NOTE PINTS isn't adding conda builds and is a few versions behind.
+      - pypints==1.1.13
