--- a/modules/nf-core/pints/caller/environment.yml
+++ b/modules/nf-core/pints/caller/environment.yml
@@ -5,4 +5,5 @@ dependencies:
   - pip
   - pip: # FIXME https://github.com/nf-core/modules/issues/5814
       # NOTE PINTS isn't adding conda builds and is a few versions behind.
+      # renovate: datasource=pypi depName=pypints
       - pypints==1.1.13
