fix missing meta.yml content

--- a/modules/nf-core/maxbin2/meta.yml
+++ b/modules/nf-core/maxbin2/meta.yml
@@ -108,6 +108,9 @@ output:
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
       - "*_bin.tar.gz":
+          type: file
+          description: Marker bins
+          pattern: "*_bin.tar.gz"
   - marker_genes:
       - meta:
           type: map
