--- a/modules/nf-core/mirdeep2/mapper/meta.yml
+++ b/modules/nf-core/mirdeep2/mapper/meta.yml
@@ -35,18 +35,19 @@ input:
           genome.
         pattern: "*"
 output:
-  - meta:
-      type: map
-      description: Groovy Map containing sample information, e.g. `[ id:'sample1', single_end:false ]`
-  - "*.fa":
-      type: file
-      description: Collapsed reads in FASTA format.
-      pattern: "*.fa"
-  - "*.arf":
-      type: file
-      description: Alignment Read Format (ARF) file containing the mapping of reads
-        to the genome.
-      pattern: "*.arf"
+  - outputs:
+      - meta:
+          type: map
+          description: Groovy Map containing sample information, e.g. `[ id:'sample1', single_end:false ]`
+      - "*.fa":
+          type: file
+          description: Collapsed reads in FASTA format.
+          pattern: "*.fa"
+      - "*.arf":
+          type: file
+          description: Alignment Read Format (ARF) file containing the mapping of reads
+            to the genome.
+          pattern: "*.arf"
   - versions:
       - versions.yml:
           type: file
