Fix mirdeep2_mapper meta.yml (#6712)
* fix missing meta.yml content

* fix meta.yml for mirdeep2_mapper

* fix hierarchy

--- a/modules/nf-core/mirdeep2/mapper/meta.yml
+++ b/modules/nf-core/mirdeep2/mapper/meta.yml
@@ -36,9 +36,18 @@ input:
         pattern: "*"
 output:
   - outputs:
-      - meta: {}
-      - "*.fa": {}
-      - "*.arf": {}
+      - meta:
+          type: map
+          description: Groovy Map containing sample information, e.g. `[ id:'sample1', single_end:false ]`
+      - "*.fa":
+          type: file
+          description: Collapsed reads in FASTA format.
+          pattern: "*.fa"
+      - "*.arf":
+          type: file
+          description: Alignment Read Format (ARF) file containing the mapping of reads
+            to the genome.
+          pattern: "*.arf"
   - versions:
       - versions.yml:
           type: file
