update vcfeval inputs

--- a/modules/nf-core/rtgtools/vcfeval/meta.yml
+++ b/modules/nf-core/rtgtools/vcfeval/meta.yml
@@ -40,11 +40,13 @@ input:
         type: file
         description: A BED file containining the strict regions where VCFeval should
           only evaluate the fully overlapping variants (optional)
+          This input should be used to provide the golden truth BED files.
         pattern: "*.bed"
-    - evaluation_bed:
+    - regions_bed:
         type: file
         description: A BED file containing the regions where VCFeval will evaluate every
           fully and partially overlapping variant (optional)
+          This input should be used to provide the regions used by the analysis
         pattern: "*.bed"
   - - meta2:
         type: map
