--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -143,7 +143,7 @@ jobs:
             --tap=test.tap \
             --ci \
             --verbose \
-            --only-changed \
+            --changed-since HEAD^ \
             --shard ${{ matrix.shard }}/${{ env.TOTAL_SHARDS }} \
             --filter ${{ matrix.filter }} \
             --follow-dependencies
