--- a/modules/nf-core/bcftools/pluginsetgt/meta.yml
+++ b/modules/nf-core/bcftools/pluginsetgt/meta.yml
@@ -1,68 +1,99 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "bcftools_pluginsetgt"
-## TODO nf-core: Add a description of the module and list keywords
 description: write your description here
 keywords:
-  - sort
-  - example
-  - genomics
+  - setgt
+  - bcftools
+  - genotype
+  - vcf
 tools:
   - "bcftools":
-      ## TODO nf-core: Add a description and other details for the software below
-      description: "BCFtools is a set of utilities that manipulate variant calls in the Variant Call Format (VCF) and its binary counterpart BCF. All commands work transparently with both VCFs and BCFs, both uncompressed and BGZF-compressed.  Most commands accept VCF, bgzipped VCF and BCF with filetype detected automatically even when streaming from a pipe. Indexed VCF and BCF will work in all situations. Un-indexed VCF and BCF and streams will work in most, but not all situations."
-      homepage: "None"
-      documentation: "None"
-      tool_dev_url: "None"
-      doi: ""
-      licence: ['GPL']
+      description: "BCFtools is a set of utilities that manipulate variant calls in
+        the Variant Call Format (VCF) and its binary counterpart BCF. All commands work
+        transparently with both VCFs and BCFs, both uncompressed and BGZF-compressed.\
+        \  Most commands accept VCF, bgzipped VCF and BCF with filetype detected automatically
+        even when streaming from a pipe. Indexed VCF and BCF will work in all situations.
+        Un-indexed VCF and BCF and streams will work in most, but not all situations."
+      homepage: "https://samtools.github.io/bcftools/howtos/index.html"
+      documentation: "https://samtools.github.io/bcftools/bcftools.html"
+      tool_dev_url: "https://github.com/samtools/bcftools"
+      doi: "10.1093/bioinformatics/btp352"
+      licence: ["MIT"]
+      args_id: "$args"
+      identifier: biotools:bcftools
+  - "bcftools plugin setGT":
+      description: "Bcftools plugins are tools that can be used with bcftools to manipulate
+        variant calls in Variant Call Format (VCF) and BCF. The setGT plugin sets genotypes according to the specified criteria and filtering expressions. For example, missing genotypes can be set to ref, but much more than that."
+      homepage: "https://samtools.github.io/bcftools/howtos/plugins.html"
+      documentation: "https://samtools.github.io/bcftools/howtos/plugin.setGT.html"
+      tool_dev_url: "https://github.com/samtools/bcftools"
+      doi: "10.1093/bioinformatics/btp352"
+      licence: ["MIT"]
+      args_id: "$args2"
       identifier: biotools:bcftools
 
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  # Only when we have meta
   - - meta:
         type: map
         description: |
           Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
-  
-  ## TODO nf-core: Delete / customise this example input
-    - bam:
+          e.g. [ id:'test', single_end:false ]
+    - vcf:
         type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
-
-## TODO nf-core: Add a description of all of the variables used as output
-output:
-  - bam:
-  #Only when we have meta
-    - meta:
-        type: map
         description: |
-          Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
-  ## TODO nf-core: Delete / customise this example output
-    - "*.bam":
+          The vcf file to be inspected.
+          e.g. 'file.vcf'
+    - index:
         type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+        description: |
+          The tab index for the VCF file to be inspected.
+          e.g. 'file.tbi'
+  - - regions:
+        type: file
+        description: |
+          Optionally, restrict the operation to regions listed in this file.
+          e.g. 'file.vcf'
+  - - targets:
+        type: file
+        description: |
+          Optionally, restrict the operation to regions listed in this file (doesn't rely upon index files)
+          e.g. 'file.vcf'
+output:
+  - vcf:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - "*.{vcf,vcf.gz,bcf,bcf.gz}":
+          type: file
+          description: VCF output file containing set genotypes
+          pattern: "*.{vcf,vcf.gz,bcf,bcf.gz}"
+  - tbi:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - "*.tbi":
+          type: file
+          description: Alternative VCF file index
+          pattern: "*.tbi"
+  - csi:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - "*.csi":
+          type: file
+          description: Default VCF file index
+          pattern: "*.csi"
   - versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
-
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@eweizy"
 maintainers:
