Better tools description

--- a/modules/nf-core/irescue/meta.yml
+++ b/modules/nf-core/irescue/meta.yml
@@ -1,14 +1,14 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "irescue"
-description: Uncertainty-aware quantification of transposable elements expression in scRNA-seq
+description: Quantification of transposable elements expression in scRNA-seq
 keywords:
   - scRNA-seq
   - transposons
   - repeats
 tools:
   - "irescue":
-      description: "ncertainty-aware quantification of transposable elements expression in scRNA-seq"
+      description: "IRescue is a tool for uncertainty-aware quantification of transposable elements expression in scRNA-seq"
       homepage: "https://pypi.org/project/IRescue"
       documentation: "https://pypi.org/project/IRescue"
       tool_dev_url: "https://github.com/bodegalab/irescue"
