--- a/modules/nf-core/bcftools/pluginsetgt/meta.yml
+++ b/modules/nf-core/bcftools/pluginsetgt/meta.yml
@@ -1,6 +1,6 @@
 ---
 name: "bcftools_pluginsetgt"
-description: write your description here
+description: Sets genotypes according to the specified criteria and filtering expressions. For example, missing genotypes can be set to ref, but much more than that.
 keywords:
   - setgt
   - bcftools
