--- a/modules/nf-core/star/align/meta.yml
+++ b/modules/nf-core/star/align/meta.yml
@@ -100,19 +100,13 @@ output:
           type: file
           description: Sorted BAM file of read alignments (optional)
           pattern: "*sortedByCoord.out.bam"
-      - "*sortedByCoord.out.bam":
+      - ${prefix}.sortedByCoord.out.bam:
           type: file
           description: Sorted BAM file of read alignments (optional)
           pattern: "*sortedByCoord.out.bam"
   - bam_sorted_aligned:
-      - meta:
-          type: file
-          description: Sorted aligned BAM file of read alignments (optional)
-          pattern: "*Aligned.sortedByCoord.out.bam"
-      - "*Aligned.sortedByCoord.out.bam":
-          type: file
-          description: Sorted BAM file of read alignments (optional)
-          pattern: "*Aligned.sortedByCoord.out.bam"
+      - meta: {}
+      - ${prefix}.Aligned.sortedByCoord.out.bam: {}
   - bam_transcript:
       - meta:
           type: file
@@ -155,9 +149,12 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
+          pattern: "*.SJ.out.tab"
       - "*.SJ.out.tab":
-          type: file
-          description: STAR output splice junction tab file
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
           pattern: "*.SJ.out.tab"
   - read_per_gene_tab:
       - meta:
@@ -165,9 +162,12 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
+          pattern: "*.ReadsPerGene.out.tab"
       - "*.ReadsPerGene.out.tab":
-          type: file
-          description: STAR output read per gene tab file
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
           pattern: "*.ReadsPerGene.out.tab"
   - junction:
       - meta:
@@ -184,9 +184,12 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
+          pattern: "*.out.sam"
       - "*.out.sam":
-          type: file
-          description: STAR output SAM file
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
           pattern: "*.out.sam"
   - wig:
       - meta:
