--- a/modules/nf-core/star/align/tests/nextflow.config
+++ b/modules/nf-core/star/align/tests/nextflow.config
@@ -11,4 +11,9 @@ process {
 }
 
 // Fix chown issue for the output star folder
-docker.runOptions = '--platform=linux/amd64 -u $(id -u):$(id -g)'
+
+docker {
+    enabled = true
+    fixOwnership = true
+    runOptions = '--platform=linux/amd64 -u $(id -u):$(id -g)'
+}
