Add non-file mandatory command arguments

--- a/modules/nf-core/bcftools/pluginsetgt/meta.yml
+++ b/modules/nf-core/bcftools/pluginsetgt/meta.yml
@@ -48,6 +48,14 @@ input:
         description: |
           The tab index for the VCF file to be inspected.
           e.g. 'file.tbi'
+  - - target_gt:
+        type: string
+        description: |
+          Genotypes to change
+  - - new_gt:
+        type: string
+        description: |
+          Genotypes to set
   - - regions:
         type: file
         description: |
