--- a/modules/nf-core/bcftools/pluginsetgt/tests/vcf_gz_index_tbi.config
+++ b/modules/nf-core/bcftools/pluginsetgt/tests/vcf_gz_index_tbi.config
@@ -1,5 +1,5 @@
 process {
     ext.prefix = { "${meta.id}_vcf" }
     ext.args = "--output-type z --write-index=tbi --no-version"
-    ext.args2 = " -t a -n p"
+    ext.args2 = "-s 42"
 }
